--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -98,10 +98,9 @@ body {
 /* Hero */ 
 
 .page-header {
-    background: url(../assets/desktop/image-header.jpg);
-    background-position: bottom;
+    background: url(../assets/desktop/image-header.jpg) bottom;
     background-size: cover;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .page-header-heading {
@@ -111,7 +110,7 @@ body {
     flex-direction: column;
     align-items: center;
     row-gap: 3rem;
-    font-size: 1.8em;
+    font-size: 1.8rem;
 }
 
 /* Nav Bar */
