--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -110,7 +110,11 @@ body {
     flex-direction: column;
     align-items: center;
     row-gap: 3rem;
-    font-size: 1.8rem;
+    font-size: 2rem;
+}
+
+.page-header-heading h1 {
+    font-weight: 900;
 }
 
 /* Nav Bar */
